feat: slanting in header

--- a/src/app/alamo-header/alamo-header.component.html
+++ b/src/app/alamo-header/alamo-header.component.html
@@ -1,4 +1,6 @@
-<header class="header">
-  <img class="header__arrow" src="assets/svg/Arrow.svg" />
-  <img class="header__logo" src="assets/svg/Logo.svg" />
+<header class="alamo-header">
+  <div class="alamo-header__contents">
+    <img src="assets/svg/Arrow.svg" />
+    <img src="assets/svg/Logo.svg" />
+  </div>
 </header>
