--- a/src/app/alamo-header/alamo-header.component.scss
+++ b/src/app/alamo-header/alamo-header.component.scss
@@ -1,9 +1,12 @@
-.header {
+.alamo-header {
   width: 100%;
   height: 560px;
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
   background: linear-gradient(135.99deg, #ff009d 3.42%, #f5b324 96.5%);
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex-direction: column;
+  &__contents {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
