--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<alamo-header></alamo-header> <router-outlet></router-outlet>
+<div class="main-app">
+  <alamo-header></alamo-header>
+  <router-outlet></router-outlet>
+</div>
