--- a/src/app/cinemas/cinemas.component.scss
+++ b/src/app/cinemas/cinemas.component.scss
@@ -42,6 +42,8 @@
   &__cinema-btns {
     display: flex;
     flex-wrap: wrap;
+    padding-bottom: 64px;
+
     li {
       width: 30%;
       margin: 1%;
