--- a/src/app/cinemas/cinemas.component.scss
+++ b/src/app/cinemas/cinemas.component.scss
@@ -78,5 +78,12 @@
       text-decoration: none;
       color: #090909;
     }
+
+    &:hover {
+      background-color: #090909;
+      a {
+        color: #f0b323;
+      }
+    }
   }
 }
