feat: show details started

--- a/src/app/alamo-header/alamo-header.component.html
+++ b/src/app/alamo-header/alamo-header.component.html
@@ -1,6 +1,8 @@
 <header class="alamo-header">
   <div class="alamo-header__contents">
     <img src="assets/svg/Arrow.svg" />
-    <img src="assets/svg/Logo.svg" />
+    <a routerLink="/">
+      <img src="assets/svg/Logo.svg" />
+    </a>
   </div>
 </header>
