refactor: style updates

--- a/src/app/cinemas/cinemas.component.scss
+++ b/src/app/cinemas/cinemas.component.scss
@@ -39,6 +39,12 @@
       0px 3px 4px rgba(0, 0, 0, 0.12), 0px 1px 5px rgba(24, 17, 3, 0.2);
     border-radius: 4px;
   }
+  @include media-breakpoint-down(lg) {
+    &__contents {
+      padding: 32px 43px;
+    }
+  }
+
   &__cinema-btns {
     display: flex;
     flex-wrap: wrap;
@@ -56,9 +62,10 @@
       margin-left: 0;
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       li {
-        outline: 1px solid red;
+        width: 100%;
+        margin: 1% 0;
       }
     }
   }
