fix: header responsiveness

--- a/src/app/alamo-header/alamo-header.component.html
+++ b/src/app/alamo-header/alamo-header.component.html
@@ -2,7 +2,7 @@
   <div class="alamo-header__contents">
     <img src="assets/svg/Arrow.svg" />
     <a routerLink="/">
-      <img src="assets/svg/Logo.svg" />
+      <img src="assets/svg/Logo.svg" class="alamo-header__logo" />
     </a>
   </div>
 </header>
