--- a/src/app/alamo-header/alamo-header.component.scss
+++ b/src/app/alamo-header/alamo-header.component.scss
@@ -1,3 +1,7 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
 .alamo-header {
   width: 100%;
   height: 560px;
@@ -8,5 +12,14 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+  }
+
+  &__logo {
+    width: 100%;
+    height: 100%;
+  }
+
+  @include media-breakpoint-down(sm) {
+    height: 460px;
   }
 }
