--- a/src/app/cinemas/cinemas.component.html
+++ b/src/app/cinemas/cinemas.component.html
@@ -3,15 +3,13 @@
     <div class="cmp-cinemas__title">Find a movie</div>
     <div class="cmp-cinemas__sub-title">Select Theater</div>
     <ul class="cmp-cinemas__cinema-btns list-unstyled">
-      <li *ngFor="let cinema of cinemas">
-        <a
-          routerLink="/{{ cityId }}/{{ cinema.id }}"
-          class="btn w-100 text-uppercase text-nowrap fw-bold"
-          [ngClass]="{
-            'btn-primary': cinemaId === cinema.id,
-            'btn-outline-dark': cinemaId !== cinema.id
-          }"
-        >
+      <li
+        *ngFor="let cinema of cinemas"
+        [ngClass]="{
+          'cinema-selected': cinemaId === cinema.id
+        }"
+      >
+        <a routerLink="/{{ cityId }}/{{ cinema.id }}">
           {{ cinema.name }}
         </a>
       </li>
