--- a/src/app/cinemas/cinemas.component.scss
+++ b/src/app/cinemas/cinemas.component.scss
@@ -55,9 +55,27 @@
     flex-wrap: wrap;
     padding-bottom: 64px;
 
+    a {
+      text-decoration: none;
+      color: #090909;
+      display: block;
+      width: 100%;
+      text-align: center;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+
     li {
-      width: 30%;
+      border: 1px solid #090909;
+      border-radius: 4px;
+      box-sizing: border-box;
+      padding: 15px;
+      width: 32%;
       margin: 1%;
+      &.cinema-selected,
+      &:hover {
+        background-color: #f0b323;
+      }
     }
     li:nth-of-type(3n) {
       margin-right: 0;
