feat: having a space for footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="main-app">
   <alamo-header></alamo-header>
   <router-outlet></router-outlet>
+  <footer>
+    <!-- Currently footer is empty -->
+  </footer>
 </div>
