--- a/src/app/cinemas/cinemas.component.scss
+++ b/src/app/cinemas/cinemas.component.scss
@@ -25,14 +25,11 @@
   }
 
   &__contents {
-    position: absolute;
     padding: 32px 96px;
-    top: -132px;
-    left: 0;
-    right: 0;
-    width: 75%;
+    margin-top: -132px;
     margin-left: auto;
     margin-right: auto;
+    width: 75%;
 
     background-color: #fff;
     box-shadow: 0px 2px 4px rgba(24, 17, 3, 0.14),
