--- a/src/app/cinemas/cinemas.component.html
+++ b/src/app/cinemas/cinemas.component.html
@@ -56,6 +56,7 @@
       src="{{ getFilmImageByFilmSlug(filmSlug) }}"
       width="100%"
       height="100%"
+      style="margin-bottom: 36px"
     />
     <ul class="list-unstyled">
       <li
