--- a/src/app/cinemas/cinemas.component.html
+++ b/src/app/cinemas/cinemas.component.html
@@ -1,5 +1,5 @@
 <div class="cmp-cinemas">
-  <div *ngIf="!filmSlug" class="cmp-cinemas__contents">
+  <div *ngIf="!dataService.filmSlug" class="cmp-cinemas__contents">
     <div class="cmp-cinemas__title">Find a movie</div>
     <div class="cmp-cinemas__sub-title">Select Theater</div>
     <cinema-list
@@ -21,7 +21,11 @@
             let filmItem of dataService.getFilmsByCinemaId(dataService.cinemaId)
           "
         >
-          <a routerLink="/{{ cityId }}/{{ cinemaId }}/{{ filmItem.filmSlug }}">
+          <a
+            routerLink="/{{ dataService.cityId }}/{{ dataService.cinemaId }}/{{
+              filmItem.filmSlug
+            }}"
+          >
             {{ filmItem.filmName }}
           </a>
           <svg
@@ -40,19 +44,21 @@
       </ul>
     </div>
   </div>
-  <div *ngIf="filmSlug" class="cmp-cinemas__contents">
+  <div *ngIf="dataService.filmSlug" class="cmp-cinemas__contents">
     <div class="cmp-cinemas__title">Find a show time</div>
     <div class="cmp-cinemas__sub-title">
       Choose a time for
-      <span class="fw-bold">{{ getFilmNameByFilmSlug(filmSlug) }}</span>
+      <span class="fw-bold">{{
+        dataService.getFilmNameByFilmSlug(dataService.filmSlug)
+      }}</span>
       at
       <span class="fw-bold">{{
         dataService.getCinemaNameById(dataService.cinemaId)
       }}</span>
     </div>
     <img
-      *ngIf="getFilmImageByFilmSlug(filmSlug)"
-      src="{{ getFilmImageByFilmSlug(filmSlug) }}"
+      *ngIf="dataService.getFilmImageByFilmSlug(dataService.filmSlug)"
+      src="{{ dataService.getFilmImageByFilmSlug(dataService.filmSlug) }}"
       width="100%"
       height="100%"
       style="margin-bottom: 36px"
@@ -61,7 +67,10 @@
       <li
         class="cmp-show-item"
         *ngFor="
-          let showTimeInfo of getSessionByCinemaIdFilmSlug(cinemaId, filmSlug)
+          let showTimeInfo of dataService.getSessionByCinemaIdFilmSlug(
+            dataService.cinemaId,
+            dataService.filmSlug
+          )
         "
       >
         <div class="fw-bold text-center">
