--- a/src/app/cinemas/cinemas.component.html
+++ b/src/app/cinemas/cinemas.component.html
@@ -1,24 +1,20 @@
 <div class="cmp-cinemas">
-  <div *ngIf="!dataService.filmSlug" class="cmp-cinemas__contents">
+  <div *ngIf="!ds.filmSlug" class="cmp-cinemas__contents">
     <div class="cmp-cinemas__title">Find a movie</div>
     <div class="cmp-cinemas__sub-title">Select Theater</div>
     <cinema-list></cinema-list>
-    <div *ngIf="dataService.cinemaId">
+    <div *ngIf="ds.cinemaId">
       <div class="cmp-cinemas__sub-title">
         Films playing at
-        <span class="fw-bold">{{
-          dataService.getCinemaNameById(dataService.cinemaId)
-        }}</span>
+        <span class="fw-bold">{{ ds.getCinemaNameById(ds.cinemaId) }}</span>
       </div>
       <ul class="list-unstyled">
         <li
           class="cmp-cinemas__film-item"
-          *ngFor="
-            let filmItem of dataService.getFilmsByCinemaId(dataService.cinemaId)
-          "
+          *ngFor="let filmItem of ds.getFilmsByCinemaId(ds.cinemaId)"
         >
           <a
-            routerLink="/{{ dataService.cityId }}/{{ dataService.cinemaId }}/{{
+            routerLink="/{{ ds.cityId }}/{{ ds.cinemaId }}/{{
               filmItem.filmSlug
             }}"
           >
@@ -40,21 +36,17 @@
       </ul>
     </div>
   </div>
-  <div *ngIf="dataService.filmSlug" class="cmp-cinemas__contents">
+  <div *ngIf="ds.filmSlug" class="cmp-cinemas__contents">
     <div class="cmp-cinemas__title">Find a show time</div>
     <div class="cmp-cinemas__sub-title">
       Choose a time for
-      <span class="fw-bold">{{
-        dataService.getFilmNameByFilmSlug(dataService.filmSlug)
-      }}</span>
+      <span class="fw-bold">{{ ds.getFilmNameByFilmSlug(ds.filmSlug) }}</span>
       at
-      <span class="fw-bold">{{
-        dataService.getCinemaNameById(dataService.cinemaId)
-      }}</span>
+      <span class="fw-bold">{{ ds.getCinemaNameById(ds.cinemaId) }}</span>
     </div>
     <img
-      *ngIf="dataService.getFilmImageByFilmSlug(dataService.filmSlug)"
-      src="{{ dataService.getFilmImageByFilmSlug(dataService.filmSlug) }}"
+      *ngIf="ds.getFilmImageByFilmSlug(ds.filmSlug)"
+      src="{{ ds.getFilmImageByFilmSlug(ds.filmSlug) }}"
       width="100%"
       height="100%"
       style="margin-bottom: 36px"
@@ -63,9 +55,9 @@
       <li
         class="cmp-show-item"
         *ngFor="
-          let showTimeInfo of dataService.getSessionByCinemaIdFilmSlug(
-            dataService.cinemaId,
-            dataService.filmSlug
+          let showTimeInfo of ds.getSessionByCinemaIdFilmSlug(
+            ds.cinemaId,
+            ds.filmSlug
           )
         "
       >
