feat: adding is loading gif

--- a/src/app/cinemas/cinemas.component.html
+++ b/src/app/cinemas/cinemas.component.html
@@ -1,4 +1,5 @@
 <div class="cmp-cinemas">
+  <is-loading></is-loading>
   <div *ngIf="!ds.filmSlug" class="cmp-cinemas__contents">
     <div class="cmp-cinemas__title">Find a movie</div>
     <div class="cmp-cinemas__sub-title">Select Theater</div>
