--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -1,4 +1,5 @@
 <div class="cmp-cinemas">
+  <is-loading></is-loading>
   <div class="cmp-cinemas__contents">
     <div class="cmp-cinemas__title">Find a show time</div>
     <div class="cmp-cinemas__sub-title">
